# Anjay-lite

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.rst  Doxyfile  LICENSE  LICENSE.3RDPARTY  README.md  requirements.txt
.github/workflows/: build_docs.yml
cmake/: anjay_lite-config-version.cmake  anjay_lite-config.cmake
doc/: CMakeLists.txt
doc/sphinx/: snippet_sources.md5
doc/sphinx/extensions/: file_dirtiness_checker.py  snippet_source.py
doc/sphinx/extensions/builders/: __init__.py  dummy.py  snippet_source_linter.py  snippet_source_list_references.py
doc/sphinx/source/: AdvancedTopics.rst  BasicClient.rst  BetaLimitationsandWorkarounds.rst  Compiling_client_applications.rst  FirmwareUpdateTutorial.rst  Introduction.rst  PortingGuideForNonPOSIXPlatforms.rst  conf.py.in  index.rst
doc/sphinx/source/AdvancedTopics/: AT-Bootstrap.rst  AT-ClientLogic.rst  AT-ExternalDataTypes.rst  AT-MultiInstanceObject.rst  AT-MultiInstanceObjectDynamic.rst  AT-MultiInstanceResource.rst  AT-MultiInstanceResourceDynamic.rst  AT-QueueMode.rst
doc/sphinx/source/AdvancedTopics/_images/: anjay_client_diagrams.drawio
doc/sphinx/source/BasicClient/: BC-BasicObjectImplementation.rst  BC-Initialization.rst  BC-MandatoryObjects.rst  BC-Notifications.rst  BC-Send.rst
doc/sphinx/source/FirmwareUpdateTutorial/: FU-BasicImplementation.rst  FU-Introduction.rst
doc/sphinx/source/PortingGuideForNonPOSIXPlatforms/: NetworkingAPI.rst  TimeAPI.rst
doc/sphinx/source/PortingGuideForNonPOSIXPlatforms/NetworkingAPI/: MinimalSocketImplementation.rst  ReuseLastPort.rst
doc/sphinx/source/_static/: theme_overrides.css
examples/custom-network/minimal/: CMakeLists.txt
examples/custom-network/reuse-port/: CMakeLists.txt
examples/tutorial/AT-Bootstrap/: CMakeLists.txt
examples/tutorial/AT-ExternalDataTypes/: CMakeLists.txt
examples/tutorial/AT-ExternalDataTypes/src/: main.c
examples/tutorial/AT-MultiInstanceObject/: CMakeLists.txt
examples/tutorial/AT-MultiInstanceObject/src/: main.c  temperature_obj.c  temperature_obj.h
examples/tutorial/AT-MultiInstanceObjectDynamic/: CMakeLists.txt
examples/tutorial/AT-MultiInstanceResource/: CMakeLists.txt
examples/tutorial/AT-MultiInstanceResourceDynamic/: CMakeLists.txt
examples/tutorial/AT-MultiInstanceResourceDynamic/src/: binary_app_data_container.c  binary_app_data_container.h
examples/tutorial/AT-QueueMode/: CMakeLists.txt
examples/tutorial/BC-BasicObjectImplementation/: CMakeLists.txt
examples/tutorial/BC-BasicObjectImplementation/src/: main.c  temperature_obj.c
examples/tutorial/BC-Initialization/: CMakeLists.txt
examples/tutorial/BC-MandatoryObjects/: CMakeLists.txt
examples/tutorial/BC-Notifications/: CMakeLists.txt
examples/tutorial/BC-Notifications/src/: main.c  temperature_obj.c  temperature_obj.h
examples/tutorial/BC-Send/: CMakeLists.txt
examples/tutorial/firmware-update/: CMakeLists.txt
examples/tutorial/firmware-update/src/: firmware_update.c  firmware_update.h  main.c
include_public/anj/: anj_config.h.in  core.h  defs.h  lwm2m_send.h  utils.h
include_public/anj/compat/: log_impl_decls.h  time.h
include_public/anj/dm/: core.h  defs.h  device_object.h  fw_update.h  security_object.h  server_object.h
include_public/anj/log/: log.h
include_public/anj_internal/: bootstrap.h  coap.h  core.h  exchange.h  io_ctx.h  lwm2m_send.h  observe.h  register.h  utils.h
include_public/anj_internal/dm/: defs.h
include_public/anj_internal/log/: log_config_check.h  log_filtering_utils.h
src/anj/: exchange.c  exchange.h  log.c  utils.c  utils.h
src/anj/coap/: attributes.c  attributes.h  block.c  block.h  coap.h  common.c  common.h  decode.c  encode.c  options.c  options.h  tcp_header.h  udp_header.h
src/anj/core/: bootstrap.c  bootstrap.h  core.c  core.h  core_utils.c  core_utils.h  lwm2m_send.c  lwm2m_send.h  reg_session.c  reg_session.h  register.c  register.h  server.c  server.h  server_bootstrap.c  server_bootstrap.h  server_register.c  server_register.h
src/anj/dm/: dm_core.c  dm_core.h  dm_create.c  dm_delete.c  dm_device_object.c  dm_discover.c  dm_execute.c  dm_fw_update.c  dm_integration.c  dm_integration.h  dm_io.h  dm_read.c  dm_register.c  dm_security_object.c  dm_server_object.c  dm_write.c
src/anj/io/: base64.c  base64.h  cbor_decoder.c  cbor_decoder.h  cbor_decoder_ll.c  cbor_decoder_ll.h  cbor_encoder.c  cbor_encoder.h  cbor_encoder_ll.c  cbor_encoder_ll.h  discover.c  internal.h  io.c  io.h  lwm2m_cbor_decoder.c  lwm2m_cbor_encoder.c  opaque.c  opaque.h  senml_cbor_decoder.c  senml_cbor_encoder.c  text_decoder.c  text_decoder.h  text_encoder.c  text_encoder.h  tlv_decoder.c  tlv_decoder.h
src/anj/observe/: notification.c  observe.c  observe.h  observe_attr.c  observe_internal.h
tests/anj/coap/: CMakeLists.txt  options.c  tcp_attributes.c  tcp_lwm2m_decode.c  tcp_lwm2m_prepare.c  udp_attributes.c  udp_lwm2m_decode.c  udp_lwm2m_prepare.c
tests/anj/core/: CMakeLists.txt  bootstrap.c  lwm2m_send.c  net_api_mock.c  net_api_mock.h  register.c  registration_session.c  server.c  server_bootstrap.c  server_register.c  time_api_mock.c  time_api_mock.h
tests/anj/dm/: CMakeLists.txt  dm.c  dm_bootstrap_delete.c  dm_bootstrap_discover.c  dm_bootstrap_handlers.c  dm_create.c  dm_delete.c  dm_device_object.c  dm_discover.c  dm_execute.c  dm_fw_update.c  dm_integration.c  dm_observe_handlers.c  dm_read.c  dm_register.c  dm_security_object.c  dm_server_object.c  dm_write_replace.c  dm_write_update.c
tests/anj/dm_without_composite/: CMakeLists.txt
tests/anj/exchange/: CMakeLists.txt  client_requests.c  exchange_internal.h  server_requests.c
tests/anj/io/: CMakeLists.txt  base64.c  bigdata.h  bootstrap_discover_payload.c  tlv_in.c  (+14 more)
tests/anj/net/: CMakeLists.txt  net_socket_nosec.c
tests/anj/observe/: CMakeLists.txt  attr_check.c  notification_op.c  observe_comp_op.c  observe_op.c  write_attr.c
tests/cxx_header_check/: CMakeLists.txt
tests/framework/: CMakeLists.txt  anj_unit_test.c  anj_unit_test.h
tests/iwyu/anj/: CMakeLists.txt
tools/: coverage  iwyu_check.sh
(+26 files in other folders)
